behavorial/ServiceDiscovery/service-with-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: random-generator
spec:
  type: NodePort
  selector:
    app: random-generator
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30036
    protocol: TCP
