behavorial/ServiceDiscovery/service.yml
apiVersion: v1
kind: Service
metadata:
  name: random-generator
spec:
  selector:
    app: random-generator
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
